# HabitBloom

./: Artifacts查找指南.md  Briefcase配置说明.md  Dockerfile  Docker问题解决.md  GitHub Actions说明.md  GitHub打包步骤.md  PyQt5快速开始.md  PyQt5打包指南.md  README.md  briefcase_build.py  buildozer.spec  pyproject.toml  requirements.txt  requirements_kivy.txt  settings.gradle.kts  setup_wsl.bat  一键打包.bat  一键打包PyQt5.bat  云端打包.py  修复GitHub访问.bat  修复SDK下载.bat  修复libtool错误.md  如何下载APK.md  打包文件说明.md  找不到Artifacts解决方案.md  无需Linux打包指南.md  最终修复方案.md  最终解决方案.md  构建失败排查.md  检查配置.py  确保配置正确.md  紧急修复.md  网络问题解决方案.md  解决GitHub访问问题.md  解决SDK下载问题.md  配置检查总结.md
.github/workflows/: build-apk.yml  build-pyqt5-apk.yml  create-release.yml
HabitBloom/: .gitignore  ANDROID_BUILD.md  APK_BUILD_GUIDE.md  README_打包.md  auto_build.py  build_apk.sh  check_env.sh  docker_build.py  github_actions_build.py  main.py  main_kivy.py  quick_build.sh  requirements_kivy.txt  一键打包-无需Linux.bat  修复Docker.bat  打包指南-中文.md  立即开始打包.md
HabitBloom/kivy_ui/: __init__.py  font_config.py  fonts.py
app/: build.gradle.kts
docs/: er  主花园  习惯详情  创建习惯  启动页  导航结构  总体架构图  时序图  用例图  系统设计说明书.docx  系统设计说明书.md  统计  设置  需求规格说明书.docx  需求规格说明书.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
habitbloom/: __init__.py
kivy_ui/: base.py
kivy_ui/screens/: __init__.py  garden_screen.py
kivy_ui/widgets/: plant_widget.py
src/: __init__.py
src/database/: __init__.py  db_manager.py  models.py
src/kivy_ui/: __init__.py  garden_screen.py  habit_screen.py
src/managers/: habit_manager.py  stats_manager.py
(+90 files in other folders)
