[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "HabitBloom"
bundle = "org.habitbloom"
version = "1.0.0"
url = "https://github.com/yourusername/HabitBloom"
license = "MIT"
author = "Your Name"
author_email = "your.email@example.com"

[tool.briefcase.app.habitbloom]
formal_name = "HabitBloom"
description = "让习惯如花般绽放 - 个人习惯养成应用"
sources = ["habitbloom", "src", "main.py"]
startup = "habitbloom"
requires = [
    "PyQt5>=5.15.0",
    "PyQt5-Qt5>=5.15.0",
    "PyQt5-sip>=12.9.0",
]

[tool.briefcase.app.habitbloom.android]
permissions = [
    "WRITE_EXTERNAL_STORAGE",
    "READ_EXTERNAL_STORAGE",
    "VIBRATE",
    "RECEIVE_BOOT_COMPLETED",
]
orientation = "portrait"
icon = "resources/icon.png"
splash = "resources/splash.png"
supported_orientations = ["portrait"]

[tool.briefcase.app.habitbloom.android.gradle]
min_sdk_version = "21"
target_sdk_version = "33"
compile_sdk_version = "33"
